# shrink

./: .gitignore  AGENTS.md  LEARNING_AND_SHARING.md  LICENSE  README.md  config.example.toml  go.mod  main.go  main_test.go  pyproject.toml
src/maxsize/: cli.py
