[project]
name = "maxsize"
version = "0.1.0"
description = "Agent-first macOS CLI for resizing screenshots to configured maximum dimensions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0,<1.0.0",
]

[project.scripts]
maxsize = "maxsize.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maxsize"]
